# mailroom

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_BRIEF.md  README.md  config.yaml  config.yaml.example  pyproject.toml
.github/workflows/: build.yaml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  REV-FIELD-DEPENDENCY-SUMMARY.md  ROADMAP.md  STATE.md  v1.1-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md
.planning/debug/: reset-ux-diagnosis.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  (+5 more)
.research/: README.md  jmap-eventsource.md
docs/: FUTURE.md  WIP.md  architecture.md  config.md  deploy.md  index.html  workflow.md
human-tests/: .env.example  test_10_retry_safety.py  test_11_person_contact.py  test_12_company_contact.py  test_13_docker_polling.py  test_14_eventsource.py  test_14_setup_dry_run.py  test_15_setup_apply.py  test_16_eventsource_push.py  test_17_retriage.py  test_18_rev_field_user_modification.py  test_1_auth.py  test_2_query.py  test_3_label.py  test_4_carddav_auth.py  test_5_carddav_contacts.py  test_6_carddav_groups.py  test_7_screener_poll.py  test_8_conflict_detection.py  test_9_already_grouped.py
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  secret.yaml.example  setup-job-apply.yaml  setup-job-dry-run.yaml
scripts/: deploy.sh
tests/: conftest.py  test_carddav_client.py  test_colors.py  test_config.py  test_eventsource.py  test_jmap_client.py  test_logging.py  test_provisioner.py  test_resetter.py  test_screener_workflow.py  test_sieve_guidance.py
(+288 files in other folders)
